force-app/main/default/objects/Quiz__c/Quiz__c.object-meta.xml
<CustomObject>
    <description>This table stores information about each quiz, including its unique identifier, name, description, and the ID of the user who created it.</description>
    <label>Quiz</label>
    <nameField>
        <label>Quize Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>