force-app/main/default/objects/Quiz__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&apos;Please note that failing to select an answer within the allotted time will result in a loss of points&apos;</defaultValue>
    <description>This quiz consists of a series of questions designed to test your knowledge on [subject matter]. To begin, click the &quot;Start Quiz&quot; button below. You will have a limited amount of time to complete the quiz, so it is important to read each question carefully and answer to the best of your ability. You can only submit your answers once, so be sure to review your responses before submitting. Good luck!</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>