force-app/main/default/objects/Quiz__c/fields/threshold__c.field-meta.xml
<CustomField>
    <fullName>threshold__c</fullName>
    <label>threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>